--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
   <body>
     <!-- Video -->
     <video class="video" controls height="360" width="640" hidden></video>
-    <!-- Button -->
+
     <div class="btn-box">
-      <button class="btn">START</button>
+      <button class="btn">Start</button>
     </div>
+
     <!-- Script -->
     <script src="script.js"></script>
   </body>
